force-app/main/default/objects/Audit_Participant__c/Audit_Participant__c.object-meta.xml
<CustomObject>
    <label>Audit Participant</label>
    <nameField>
        <displayFormat>AUP-{0000}</displayFormat>
        <label>Audit Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>