force-app/main/default/objects/Audit_Participant__c/fields/Audit__c.field-meta.xml
<CustomField>
    <fullName>Audit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the Audit record</description>
    <inlineHelpText>Reference to the Audit record</inlineHelpText>
    <label>Audit</label>
    <referenceTo>Audit__c</referenceTo>
    <relationshipLabel>Audit Participants</relationshipLabel>
    <relationshipName>Audit_Participants</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>