force-app/main/default/objects/Audit_Participant__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Optional notes</description>
    <inlineHelpText>Optional notes</inlineHelpText>
    <label>Comments</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>