force-app/main/default/objects/Audit_Participant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Contact (external participant)</description>
    <inlineHelpText>Reference to the Contact (external participant)</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Audit Participants</relationshipLabel>
    <relationshipName>Audit_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>