force-app/main/default/objects/Audit_Participant__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>each record should reference either a User or a Contact, but not both. This keeps the relationship clear and prevents confusion about the participant’s identity.

Validation rule:

Require that one and only one of the two fields is populated per record.
This ensures every participant is either an internal user or an external contact, but never both.</description>
    <inlineHelpText>each record should reference either a User or a Contact, but not both. This keeps the relationship clear and prevents confusion about the participant’s identity.</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auditor</fullName>
            </value>
            <value>
                <fullName>Stakeholder</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Reviewer</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Observer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>