force-app/main/default/objects/Audit_Participant__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the User (internal participant)</description>
    <inlineHelpText>Reference to the User (internal participant)</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>