force-app/main/default/objects/Audit_Participant__c/validationRules/Participant_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Participant_Type</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(User__c) &amp;&amp; ISBLANK(Contact__c)
||
NOT(ISBLANK(User__c)) &amp;&amp; NOT(ISBLANK(Contact__c))</errorConditionFormula>
    <errorMessage>Please specify either a User or a Contact, but not both.</errorMessage>
</ValidationRule>